# Project-md-backup

./: .gitignore  README.md
secmon-linux-security/: .env.example  Makefile  README.md  pyproject.toml  test_log_sources_manual.py
secmon-linux-security/backend/: __init__.py  config.py  database.py
secmon-linux-security/database/: migrate.py
secmon-linux-security/docs/: AGENT_ASSIGNMENT_AGY.md  AGENT_ASSIGNMENT_GPT56.md  AI_HANDOFF_AND_RELEASE_GATES.md  ARCHITECTURE_AND_UI.md  DATABASE_DESIGN.md  ISSUE_AND_ASSIGNMENT_INDEX.md  MVP_IMPLEMENTATION.md  P0_HANDOFF_2026-07-10.md  P1_AGY_FULL_CODE_AUDIT.md  P1_AGY_PRODUCTION_RUNTIME_VERIFICATION.md  P1_AGY_REGRESSION_VERIFICATION.md  P1_AGY_SECOND_REGRESSION_VERIFICATION.md  P1_AGY_TELEGRAM_FINAL_VERIFICATION.md  P1_CLAUDE_GLM52_SECURITY_REVIEW.md  P1_CODEX_LUNA_IMPLEMENTATION_REPORT.md  P1_SSH_DETECTOR_DESIGN.md  P1_SSH_DETECTOR_HANDOFF.md  P1_SSH_DETECTOR_PROCESS_SUMMARY.md  P1_STATUS_REPORT.md  P1_TELEGRAM_CODEX_EXECUTION_REPORT.md  P1_TELEGRAM_CODEX_EXECUTION_TASK.md  PROJECT_PLAN_AND_SCHEDULE.md  log_sources_README.md  log_sources_api.md  log_sources_implementation.md
secmon-linux-security/frontend/: package-lock.json  package.json  tsconfig.json
secmon-linux-security/scripts/: attack_report.py
secmon-linux-security/systemd/: secmon-api.service  secmon-collector.service
secmon-linux-security/tests/: test_agy_second_repair.py  test_collector_main.py  test_collector_telegram.py  test_config.py  test_log_sources.py  test_migrate.py  test_replay_deduplication.py  test_ssh_collector.py  test_ssh_parser.py  (+1 more)
(+217 files in other folders)
