[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "secmon-backend"
version = "0.1.0"
description = "SecMon Linux security monitor backend"
requires-python = ">=3.11"
dependencies = [
  "pydantic-settings>=2.2,<3",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.10,<2",
  "pytest>=8,<9",
  "ruff>=0.5,<1",
]

[tool.setuptools.packages.find]
include = ["backend*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
packages = ["backend"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
